--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,54 @@
+html,body{
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            background:url('../img/image.png') no-repeat center center;
+            background-size:cover;
+        }
+        
+     h1
+{
+background-color: #000000;
+width: 15%;
+height: 7%;
+margin-left: 40%;
+border-radius: 10px;
+}
+/* search bar style */
+.search{
+  -webkit-transition: all .55s ease;
+  width:855px;
+  margin: 0 auto;
+  padding:10px;
+  background-color:lightblue;
+  border-radius: 15px;
+  display:block;
+}
+.search form{
+  padding:2px;
+}
+.search input{
+  -webkit-transition: background .55s ease;
+  padding:10px;
+  font-size:20px;
+  font-family:inherit;
+  border-radius:15px;
+  background-color:#232833;
+  border:none;
+  color:#9f9b89;
+  outline:none;
+  box-shadow:none;
+  display:table-cell;
+  width:100%;
+}
+
+.search input:hover{
+  outline:none;
+  background:#fff;
+  
+}
+
+input:-webkit-autofill {
+  background-color:blue !important;
+}
 
